--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title: Halve
-description: Stylish, Two-Column Jekyll Theme
-url: https://taylantatli.github.io/Halve
+title: Diran Li
+description: Engineer
+url: https://diran.li
 logo: halve.png                                       # Site logo
 locale: en_US
 
@@ -31,11 +31,9 @@ sass:
 # Social Links
 #email:             email
 #google.plus:        username
-twitter:            username
 #facebook:           username
-github:             username
-stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+github:             diranl
+linkedin:          diranli
 #xing:              username
 #instagram:          username
 #lastfm:            username
@@ -52,7 +50,7 @@ stackoverflow:     123456/username   from a "http://stackoverflow.com/users/1234
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
-behance:           username
+#behance:           username
 
 # Gems
 gems:
