--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site
 title: Diran Li
-description: Engineer
+description: Developer
 url: https://diran.li
-logo: halve.png                                       # Site logo
+logo: Profile.png                                       # Site logo
 locale: en_US
 
 # Left Block Images
