--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Diran Li
 description: Developer
 url: https://diran.li
-logo: Profile.png                                       # Site logo
+logo: Profile.jpg                                       # Site logo
 locale: en_US
 
 # Left Block Images
